Package: revdepcheck.extras
===========================

Version: 0.1.0-9000 [2021-06-04]

NEW FEATURES:

* run() gained argument 'pkg'.

* Added progress updated to revdep_precache() and revdep_preinstall().

BUG FIXES:

* revdep_init() could give an error under certain circumstances.


Version: 0.1.0 [2021-06-04]

SIGINFICANT CHANGES:

* First "official" release.


Version: 0.0.1-9000 [2019-06-13]

* First draft created.

